--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,40 @@
 .App {
   text-align: center;
 }
+
 li {
   list-style: armenian;
+  text-align: justify;
+}
+
+.Counters {
+  border: dotted #104c70;
+  border-radius: 8px;
+  border-right: none;
+  border-top: none;
+  border-width: 0.5rem;
+  display: inline-block;
+  margin: 0 1rem 2rem;
+  min-width: 300px;
+}
+
+.PlaylistsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  /* border: 2px solid yellow; */
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
-
 .App-intro {
   font-size: large;
 }
