--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,12 @@
-.App {
-  text-align: center;
+:root {
+  --text-size: 16px;
+  
 }
 
-li {
-  font-size: 12px;
-  line-height: 16px;
-  list-style: decimal outside;
-  margin-left: -1rem;
-  padding: 4px 2px;
-  text-align: left;
+.App {
+  background: rgb(227, 247, 249);
+  font-size: var(--text-size);
+  text-align: center;
 }
 
 .Counters {
@@ -17,33 +15,40 @@ li {
   min-width: 300px;
 }
 
-.playCount {
-  border-top: none;
-  border-width: 0.5rem;
-  border-right: 1px dotted chartreuse;
-}
 
 .PlaylistsContainer {
-  display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+  justify-content: center;
+  padding: 2rem;
+  width: 66%;
 }
+
+.playlist {
+  align-items: center;
+  background-color: rgba(193, 29, 29, 0.2);
+  border: 1px dashed black;
+  border-radius: .5rem;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-start;
+  /* padding: 2rem; */
+  width: 80%;
+}
+
+li {
+  font-size: 1rem;
+  line-height: 1.4;
+  margin: 0 2rem;
+  padding-left: 0.5rem;
+  text-align: left;
+}
+
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-.App-intro {
-  font-size: large;
-}
-
-/* @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-} */
