--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
+html {
+  height: 100vh;
+  width:100vw;
+ }
+
 body {
   background-color: #0b181b;
+  height: 100vh;
+  font-family: papyrus;
   margin: 0;
+  overflow: hidden;
   padding: 0;
-  font-family: sans-serif;
+  width: 100vw;
 }
